bat.bool1.parottrouble.ParotTrouble.scala.error
Erreur de compilation :
ParotTrouble:5: error: not found: value &&
  if (hour<7) && (talking == true) {
              ^ParotTrouble:8: error: not found: value &&
  if (hour>20) && (talking == true) {
               ^ParotTrouble:8: error: type mismatch;
 found   : Unit
 required: Boolean
  if (hour>20) && (talking == true) {
  ^