bat.bool1.parottrouble.ParotTrouble.scala.code
def parotTrouble(talking:Boolean, hour:Int):Boolean = {
  if (talking == false) {
    return false
  }
  if (hour<7) && (talking == true) {
    return true
  }
  if (hour>20) && (talking == true) {
    return true
  }
  
  }